--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>URL Shortener</title>
+    <title>Serverless URL Shortener</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
     <h1>URL Shortener</h1>
@@ -23,6 +24,6 @@
     </div>
 
     <!-- JavaScript to use API -->
-    <script src="app.js"></script>
+    <script src="app.js" async></script>
 </body>
 </html>
