--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>URL Shortener</h1>
 
     <div>
-        <h2>Shorten an URL</h2>
+        <h2>Shorten a URL</h2>
         <input type="text" id="longUrl" placeholder="Enter long URL">
         <button onclick="createShortUrl()">Shorten URL</button>
         <p id="shortUrlResult"></p>
@@ -23,7 +23,6 @@
         <p id="redirectResult"></p>
     </div>
 
-    <!-- JavaScript to use API -->
-    <script src="app.js" async></script>
+    <script src="app.js"></script>
 </body>
 </html>
