--- a/index.html
+++ b/index.html
@@ -5,24 +5,79 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Serverless URL Shortener</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <!-- Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            background-color: #e9ecef;
+            padding-top: 50px;
+        }
+        .container {
+            max-width: 600px;
+        }
+        .card {
+            border-radius: 15px;
+            border: 1px solid #007bff;
+            background: linear-gradient(145deg, #ffffff, #f8f9fa);
+            box-shadow: 8px 8px 15px #b0b0b0, -8px -8px 15px #ffffff;
+        }
+        .btn-custom {
+            background-color: #28a745;
+            color: white;
+            border-radius: 50px;
+        }
+        .btn-custom:hover {
+            background-color: #218838;
+        }
+        h1 {
+            color: #343a40;
+            text-align: center;
+        }
+        h2, .form-group, p {
+            color: #343a40;
+            text-align: center;
+        }
+        .logo {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 50px;
+        }
+    </style>
 </head>
 <body>
-    <h1>URL Shortener</h1>
+    <div class="container">
+        <img src="nn.png" alt="Logo" class="logo mb-4">
+        <h1 class="text-center mb-4">URL Shortener</h1>
 
-    <div>
-        <h2>Shorten a URL</h2>
-        <input type="text" id="longUrl" placeholder="Enter long URL">
-        <button onclick="createShortUrl()">Shorten URL</button>
-        <p id="shortUrlResult"></p>
+        <div class="card mb-4 shadow-sm">
+            <div class="card-body">
+                <h2 class="card-title">Shorten an URL</h2>
+                <div class="form-group">
+                    <input type="text" class="form-control" id="longUrl" placeholder="Enter long URL">
+                </div>
+                <button class="btn btn-custom btn-block" onclick="createShortUrl()">Shorten URL</button>
+                <p class="mt-3" id="shortUrlResult"></p>
+            </div>
+        </div>
+
+        <div class="card shadow-sm">
+            <div class="card-body">
+                <h2 class="card-title">Redirect to Original URL</h2>
+                <div class="form-group">
+                    <input type="text" class="form-control" id="shortUrl" placeholder="Enter short URL hash">
+                </div>
+                <button class="btn btn-custom btn-block" onclick="redirectToOriginalUrl()">Redirect</button>
+                <p class="mt-3" id="redirectResult"></p>
+            </div>
+        </div>
     </div>
 
-    <div>
-        <h2>Redirect to Original URL</h2>
-        <input type="text" id="shortUrl" placeholder="Enter short URL hash">
-        <button onclick="redirectToOriginalUrl()">Redirect</button>
-        <p id="redirectResult"></p>
-    </div>
-
-    <script src="app.js"></script>
+    <!-- JavaScript to use API -->
+    <script src="app.js" async></script>
+    <!-- Bootstrap JS and dependencies -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
